# KuroNet

./: .gitignore  CMakeLists.txt  README.md  config.doxy  install_deps.sh  update_version.sh
.github/workflows/: build.yml
examples/: CMakeLists.txt  chat_example.cpp  client_example.cpp  commands_example.cpp  config_file_example.cpp  log_example.cpp  tcp_server_example.cpp
include/core/: CommandHandler.hpp  UniqueUtils.hpp  logger.hpp
include/core/System/: SystemConfig.hpp  config.default.json
include/core/commands/: base_command.hpp  clients_command.hpp  commands_bundle.hpp  token_command.hpp
include/net/: Client.hpp  Session.hpp  TCPServer.hpp
include/net/Chat/: Chat.hpp  ChatRoom.hpp
include/net/ClientTypeHandlers/: Browser.hpp  ClientTypeHndl.hpp  KuroClient.hpp  Unknown.hpp
include/net/Dispatcher/: KuroNetClient.hpp
include/net/Dispatcher/handlers/: CustomHandler.hpp  DesktopHandler.hpp  MobileHandler.hpp  UnknownHandler.hpp  WebHandler.hpp
include/net/core/: ClientPolicyRegistry.hpp
src/core/: CommandHandler.cpp  UniqueUtils.cpp  logger.cpp
src/core/commands/: clients_command.cpp  token_command.cpp
src/net/: Session.cpp  TCPServer.cpp
src/net/Chat/: Chat.cpp
src/net/core/: ClientPolicyRegistry.cpp
tests/: CMakeLists.txt  logger_test.cpp
